Fix alignment

--- a/frontend/pages/hosts/ManageHostsPage/components/HostsFilterBlock/_styles.scss
+++ b/frontend/pages/hosts/ManageHostsPage/components/HostsFilterBlock/_styles.scss
@@ -28,6 +28,11 @@
         left: -8px;
         top: 4px;
       }
+
+      .Select-value-label {
+        position: relative;
+        left: -8px;
+      }
     }
   }
 }
